--- a/ps1/ps1.Rmd
+++ b/ps1/ps1.Rmd
@@ -4,9 +4,11 @@ author: "Tristan Mahr"
 date: "February 26, 2015"
 output: 
   html_document: 
+    css: assets/custom.css
     fig_caption: yes
     keep_md: yes
-    css: assets/custom.css
+  md_document:
+    variant: markdown_github
 csl: assets/apa.csl
 bibliography: assets/ps1.bib
 ---
@@ -14,6 +16,7 @@ bibliography: assets/ps1.bib
 ```{r, warning = FALSE, message = FALSE, echo = FALSE}
 library("knitr")
 opts_chunk$set(warning = FALSE, message = FALSE, fig.path = "assets/figure/")
+options(knitr.table.format = "markdown")
 if (interactive()) setwd("ps1")
 ```
 
